added vertical banner in about
l

--- a/rarebit-1.5/css/style.css
+++ b/rarebit-1.5/css/style.css
@@ -61,6 +61,7 @@ header img {
   clear: left;
   float:right;
   margin-left:20px;
+  image-rendering: crisp-edges; 
 }
 
 /* for pictures displayed to the left */
