--- a/dungeon-crew/css/style.css
+++ b/dungeon-crew/css/style.css
@@ -67,6 +67,7 @@ header img {
 .navLink {
   color:rgb(0, 0, 0);
   text-decoration-thickness: 0px;
+  text-decoration: none;
 }
 
 /* for pictures displayed to the left */
