--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
 
 
+@keyframes idle_bob{
+	0%{
+	  transform:translateY(0);
+	}
+	50%{
+	  transform:translateY(7px);
+	}
+	100%{
+	  transform:translateY(0px);
+	}
+  }
+
 
 span {
 	text-shadow: #005853 3px 3px 2px, #0a6460 0px 0px 7px;
