--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
 
+/* 
+	WorkBubbles CSS
+*/
+
+
+.dot {
+	height: 25px;
+	width: 25px;
+	background-color: #84fff5;
+	border-radius: 50%;
+	display: inline-block;
+  }
 
 @keyframes idle_bob{
 	0%{
@@ -11,6 +23,11 @@
 	  transform:translateY(0px);
 	}
   }
+
+
+/*
+OLD CSS STUFF
+*/
 
 
 span {
