--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 	height: 25px;
 	width: 25px;
 	background-color: #84fff5;
+	border-color: #ee0000;
+	border-width: thick;
 	border-radius: 50%;
 	display: inline-block;
   }
