--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 }
 
 .workBubble {
+	z-index: 1;
 	scale: 1;
 	background-color: rgba(0, 0, 0, 0.2);
 	background-size: 375px;
@@ -39,6 +40,7 @@
 }
 
 .workBubble:hover {
+	z-index: 5;
 	scale:1.175;
 	background-color: rgba(0, 0, 0, 0.85);
 }
@@ -57,7 +59,7 @@
 	  transform:translateY(0);
 	}
 	50%{
-	  transform:translateY(7px);
+	  transform:translateY(10px);
 	}
 	100%{
 	  transform:translateY(0px);
