--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@
 	animation: idle_bob 5s infinite ease-in-out;
 }
 
-@media screen and (max-width: 700px) {
+/* @media screen and (max-width: 700px) {
 	.workBubble {
 	  top: 0px;
 	  margin-left: 0px;
 	  background-color: rgb(255, 0, 0);
 	}
-  }
+  } */
 
 .workBubble:hover {
 	z-index: 5;
