wip background images

--- a/style.css
+++ b/style.css
@@ -631,19 +631,22 @@ p {
 	image-rendering: crisp-edges;
 	position:absolute;
 	scale: 2.5;
-  }
+	z-index: -5;
+}
 
 .img-scrambled {
 	position:absolute;
 	scale: 0.4;
+	z-index: -5;
   }
 
   .img-olmo {
 	position:absolute;
 	scale: 0.18;
-  }
-
+	z-index: -5;
+}
   .img-pingu {
 	position:absolute;
 	scale: 0.6;
-  }
+	z-index: -5;
+}
