--- a/dungeon-crew/css/style.css
+++ b/dungeon-crew/css/style.css
@@ -121,7 +121,7 @@ header #nav {
 .comicPage img {
   width: 900px;
   max-width: 98%;
-  /*image-rendering: crisp-edges; */
+  image-rendering: crisp-edges; 
 }
 
 /* style author notes */
