--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
 	WorkBubbles CSS
 */
 
+:root {
+    --scale-factor: 1.0;
+	--scale-factor-hover: 1.175;
+}
+
 .workBubble p {
 	color:#00000000;
 	
@@ -30,6 +35,7 @@
 	height: 200px;
 	width: 300px;
 	display: inline-block;
+	scale: var(--scale-factor);
 
 	-moz-transition: all .4s ease-out;
     -o-transition: all .4s ease-out;
@@ -41,7 +47,7 @@
 
 .workBubble:hover {
 	z-index: 8;
-	scale:1.175;
+	scale: var(--scale-factor-hover);
 	background-color: rgba(0, 0, 0, 0.85);
 }
 
@@ -64,6 +70,8 @@
 	display: inline-block;
 	z-index: -5;
   }
+
+/* scale(var(--scale-factor)) */
 
 @keyframes idle_bob{
 	0%{
