--- a/ancestral-cookbook/style.css
+++ b/ancestral-cookbook/style.css
@@ -1050,27 +1050,30 @@ textarea:focus {
   color: #474747;
   margin-bottom: 30px; }
 .ingredients .custom-checkbox .custom-control-label::before {
-  border-radius: 0; }
+  border-radius: 50%;
+}
 .ingredients .custom-control-label::before {
-  width: 30px;
-  height: 30px;
-  background-color: #f3f5f8; }
+  width: 15px;
+  height: 15px;
+  background-color: hsl(216, 26%, 96%); }
 .ingredients .custom-control {
   padding-left: 2.5rem;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   min-height: 35px; }
 .ingredients .custom-control-label {
   margin-bottom: 0;
-  padding-top: 5px;
+  padding-top: 0px;
   font-size: 16px;
   font-weight: 600;
   color: #2f2f2f; }
 .ingredients .custom-control-label::after {
+  background-image: none !important;
   top: 10px;
   left: 5px;
   width: 20px;
   height: 20px; }
 .ingredients .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+  background-image: none !important;
   background-color: #40ba37; }
 
 /* :: 16.0 Footer Area CSS */
@@ -1335,7 +1338,7 @@ textarea:focus {
   .single-accordion .accordion-content p {
     padding: 20px 15px 5px;
     margin-bottom: 0; }
-
+    
 /* Tabs CSS*/
 .delicious-tabs-content {
   position: relative;
