--- a/ancestral-cookbook/style.css
+++ b/ancestral-cookbook/style.css
@@ -1199,10 +1199,9 @@ textarea:focus {
 .breadcumb-area {
   position: relative;
   z-index: 10;
-  width: 92%;
+  width: 100%;
   height: 190px;
-  margin-left: 4%;
-  margin-right: 4%; }
+}
   @media only screen and (max-width: 767px) {
     .breadcumb-area {
       height: 120px; } }
