--- a/ancestral-cookbook/style.css
+++ b/ancestral-cookbook/style.css
@@ -24,7 +24,9 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  font-size: 14px; }
+  font-size: 14px; 
+  background-color: white;
+}
 
 h1,
 h2,
@@ -1385,3 +1387,51 @@ textarea:focus {
     padding-left: 30px; }
 
 /*# sourceMappingURL=style.css.map */
+
+label.comments {
+  color: #494949;
+  margin-left: 5px; 
+  margin-top: 15px; 
+  margin-bottom: -5px; 
+  font-style: italic;
+}
+
+/* DARK MODE */
+
+@media (prefers-color-scheme:light ) {    /* prefers-color-scheme: dark */
+  body {
+    background-color: #121212;
+    color: #e0e0e0;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: #aeaeae;
+    line-height: 1.3;
+    font-weight: 600;
+  }
+
+  h2.recipetitle {
+    color: rgb(255, 255, 255);
+  }
+
+  label.comments {
+    color:#c9c9c9
+  }
+
+  h4.fixed-title {
+    color:#e2e2e2
+  }
+
+  .ingredients .custom-control-label::before {
+    background-color: #4a4a4a;
+  }
+
+  .ingredients .custom-control-label  {
+    color:#cdcdcd
+  }
+}
