--- a/ancestral-cookbook/style.css
+++ b/ancestral-cookbook/style.css
@@ -528,7 +528,10 @@ textarea:focus {
           margin-top: 30px; } }
   @media only screen and (max-width: 767px) {
     .header-area .nav-brand img {
-      max-width: 90px; } }
+      max-width: 90px; 
+      /*visibility: hidden;*/
+    } 
+  }
 
 /* :: 6.0 Welcome Area CSS */
 .hero-area {
