--- a/ancestral-cookbook/style.css
+++ b/ancestral-cookbook/style.css
@@ -1202,9 +1202,11 @@ textarea:focus {
 }
 
 .img-logo {
-  max-height: 110px;
+  max-height: 80px;
+  margin-top: 0px;
   @media only screen and (min-width: 767px) {
-    margin-top: -20px;
+    margin-top: -15px;
+    max-height: 100px;
   }
 }
 
@@ -1456,5 +1458,9 @@ label.comments {
 
   #preloader {
     background-color: #000000;
+  }
+
+  .img-logo {
+    content: url("img/core-img/logo_dark_mode.png");
   }
 }
