--- a/ancestral-cookbook/style.css
+++ b/ancestral-cookbook/style.css
@@ -1411,7 +1411,7 @@ label.comments {
 
 /* DARK MODE */
 
-@media (prefers-color-scheme:light ) {    /* prefers-color-scheme: dark */
+@media (prefers-color-scheme:dark ) {    /* prefers-color-scheme: dark */
   body {
     background-color: #121212;
     color: #e0e0e0;
