--- a/ancestral-cookbook/style.css
+++ b/ancestral-cookbook/style.css
@@ -25,7 +25,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 14px; 
-  background-color: white;
+  background-color: #E4D2AC;
 }
 
 h1,
