--- a/ancestral-cookbook/style.css
+++ b/ancestral-cookbook/style.css
@@ -17,10 +17,24 @@
 @import url(css/custom-icon.css);
 @import url(css/classy-nav.min.css);
 @import url(css/nice-select.min.css);
+@font-face {
+    font-family: 'CinzelDecorative';
+    src: url('fonts/CinzelDecorative-Black.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Cinzel';
+    src: url('fonts/Cinzel-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* :: 3.0 Base CSS */
 * {
   margin: 0;
   padding: 0; }
+
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -34,9 +48,11 @@ h3,
 h4,
 h5,
 h6 {
-  color: #000000;
+  color: #3F2E1F;
+  font-family: 'Cinzel', 'Open Sans', sans-serif;
   line-height: 1.3;
-  font-weight: 600; }
+  font-weight: 1000;
+  font-size: 38px;}
 
 p {
   color: #9b9b9b;
