--- a/ancestral-cookbook/style.css
+++ b/ancestral-cookbook/style.css
@@ -43,7 +43,6 @@ body {
 }
 
 h1,
-h2,
 h3,
 h4,
 h5,
@@ -53,6 +52,14 @@ h6 {
   line-height: 1.3;
   font-weight: 1000;
   font-size: 38px;}
+
+h2 {
+  font-family: 'CinzelDecorative', 'Open Sans', sans-serif;
+  color: #3F2E1F;
+  line-height: 1.3;
+  font-weight: 1000;
+  font-size: 48px;
+}
 
 p {
   color: #9b9b9b;
@@ -1034,19 +1041,16 @@ textarea:focus {
     width: 40px;
     height: 40px;
     line-height: 40px;
-    color: #ffffff;
+    color: #9C926D;
     text-shadow: 
-        -2px -2px 0 #000,
-        -2px -2px 0 #000,
-        -2px  2px 0 #000,
-         2px  2px 0 #000;
+         3px  3px 0 #3F2E1F;
     top: 50%;
     margin-top: -20px;
     left: 4%;
     position: absolute;
     z-index: 10;
     text-align: center;
-    font-size: 16px;
+    font-size: 28px;
     font-weight: 600;
     opacity: 0;
     visibility: hidden;
